@@ -1,3 +1,8 @@
+2008-05-06  Albert Graef  <Dr.Graef@t-online.de>
+
+	* interpreter.cc (declare_extern, fun_prolog): Handle some obscure
+	cases of name collisions between Pure and C functions.
+
 2008-05-05  Albert Graef  <Dr.Graef@t-online.de>
 
 	* INSTALL: Add system-specific notes.
